--- a/index.html
+++ b/index.html
@@ -24,24 +24,6 @@
       </div>
     </div>
 
-    <script>
-      const passwordBox = document.getElementById("password");
-      const length = document.getElementById("length-number");
-
-      const upperCase = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-      const lowerCase = "abcdefghijklmnopqrstuvwxyz";
-      const number = "0123456789";
-      const symbol = "!@#$%^&*()?><";
-      const allChars = upperCase + lowerCase + number + symbol;
-
-      function generate() {
-        let password = "";
-        console.log(length);
-        while (password.length < length.value) {
-          password += allChars[Math.floor(Math.random() * allChars.length)];
-        }
-        passwordBox.value = password;
-      }
-    </script>
+    <script src="randomPass.js"></script>
   </body>
 </html>
