--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <h1>Generate a <br /><span>Random Password</span></h1>
       <div class="inputBox">
         <input type="text" id="password" placeholder="Password" />
-        <img src="copy-icon.jpg" />
+        <img src="copy-icon.jpg" onclick="copyPassword()" />
       </div>
       <div class="length">
         <h3>Enter the length of password</h3>
-        <input type="text" id="length-number" />
+        <input type="number" id="length-number" value="12"/>
       </div>
       <div class="gen-pass">
         <button id="gen-btn" onclick="generate()">
